# oden

./: CMakeLists.txt  CMakePresets.json  README.md
include/: oden.h
src/: main.cpp  mass_damper_contact.cpp  spring_damper_contact.cpp
